feat: add style isolation & code highlighting

--- a/docs/src/app/module/button/page.mdx
+++ b/docs/src/app/module/button/page.mdx
@@ -4,9 +4,8 @@
 
 按钮有三种类型：主按钮、次按钮、线框按钮。主按钮在同一个操作区域建议最多出现一次。
 
-
 ```tsx
-import { Button } from '@yike-design/react'
+import { Button } from '@yike-design/react';
 
 export default () => {
   return (
@@ -15,7 +14,6 @@ export default () => {
       <Button>次要按钮</Button>
       <Button>线框按钮</Button>
     </div>
-  )
-}
+  );
+};
 ```
-
