chore: input init

--- a/docs/src/app/module/input/page.mdx
+++ b/docs/src/app/module/input/page.mdx
@@ -1,1 +1,17 @@
 # Input 输入框
+
+
+## Input
+
+
+```tsx
+import { Input } from '@yike-design/react';
+
+export default () => {
+  return (
+    <div>
+     <Input />
+    </div>
+  );
+};
+```
