feat(button): 完成样式

--- a/docs/src/app/module/button/page.mdx
+++ b/docs/src/app/module/button/page.mdx
@@ -11,7 +11,7 @@ export default () => {
   return (
     <div>
       <Button>主要按钮</Button>
-      <Button type="secondary" status="warning">次要按钮</Button>
+      <Button type="secondary">次要按钮</Button>
       <Button type="outline">线框按钮</Button>
     </div>
   );
