--- a/docs/src/app/module/space/page.mdx
+++ b/docs/src/app/module/space/page.mdx
@@ -155,9 +155,10 @@ export default () => {
 
 ## API
 
-| 参数      | 描述     | 类型                                          | 默认值       |
-| --------- | -------- | --------------------------------------------- | ------------ |
-| size      | 间距尺寸 | 's'｜'m'｜'l'｜'xl'｜number｜[number, number] | 'l'          |
-| align     | 对齐     | 'start'｜'center'｜'end'｜'baseline'          | 'start'      |
-| wrap      | 换行     | boolean                                       | false        |
-| direction | 方向     | 'vertical'｜'horizontal'                      | 'horizontal' |
+| 参数      | 描述           | 类型                                          | 默认值       |
+| --------- | -------------- | --------------------------------------------- | ------------ |
+| size      | 间距尺寸       | 's'｜'m'｜'l'｜'xl'｜number｜[number, number] | 'l'          |
+| align     | 对齐           | 'start'｜'center'｜'end'｜'baseline'          | 'start'      |
+| wrap      | 换行           | boolean                                       | false        |
+| direction | 方向           | 'vertical'｜'horizontal'                      | 'horizontal' |
+| block     | 显示为块级元素 | boolean                                       | false        |
