--- a/docs/src/app/module/icon/page.mdx
+++ b/docs/src/app/module/icon/page.mdx
@@ -16,7 +16,9 @@ import IconList from './IconList.tsx';
 
 <IconList />
 
-## 图标使用
+## 基本使用
+
+从 `@yike-design/react-icons` 中引入需要的图标，然后直接使用即可
 
 ```tsx
 import { Space } from '@yike-design/react';
@@ -31,3 +33,33 @@ export default () => {
   );
 };
 ```
+
+## 旋转角度
+
+通过 `rotate` 属性设置图标旋转角度，单位为度数。
+
+```tsx
+import { Space } from '@yike-design/react';
+import { WordOutlined } from '@yike-design/react-icons';
+
+export default () => {
+  return (
+    <Space>
+      <WordOutlined />
+      <WordOutlined rotate={45} />
+      <WordOutlined rotate={90} />
+      <WordOutlined rotate={180} />
+    </Space>
+  );
+};
+```
+
+## API
+
+除了一下几个属性，其他可以设置给 span 元素的属性都可以设置
+
+| 参数      | 描述             | 类型                       | 默认值 |
+| --------- | ---------------- | -------------------------- | ------ |
+| className | 设置图标的样式名 | string                     | -      |
+| rotate    | 图标旋转角度     | number                     | 0      |
+| svgRef    | 获取 svg 元素    | `React.Ref<SVGSVGElement>` | -      |
