--- a/docs/src/app/module/space/page.mdx
+++ b/docs/src/app/module/space/page.mdx
@@ -20,7 +20,7 @@ export default () => {
 };
 ```
 
-## 间隔尺寸 Size
+## 间隔尺寸
 
 内置 4 个尺寸，分别是 `s - 4px`，`m - 8px`，`l - 16px`，`xl -24px`，默认为 `l`，为数字或枚举值时，是`水平和垂直间距`；为数组时，是 `[水平间距, 垂直间距]`。
 
@@ -83,7 +83,7 @@ export default () => {
 };
 ```
 
-## 对齐 Align
+## 对齐
 
 内置 4 种对齐方式，分别为 `'start'｜'center'｜'end'｜'baseline'` ，在水平模式下默认为 `start`。
 
@@ -99,13 +99,13 @@ export default () => {
         <div className="demo-box-2"></div>
         <div className="demo-box-3"></div>
       </Space>
-      <h4>默认上对齐</h4>
+      <h4>上对齐</h4>
       <Space align="center">
         <div className="demo-box-1"></div>
         <div className="demo-box-2"></div>
         <div className="demo-box-3"></div>
       </Space>
-      <h4>默认上对齐</h4>
+      <h4>上对齐</h4>
       <Space align="end">
         <div className="demo-box-1"></div>
         <div className="demo-box-2"></div>
@@ -116,7 +116,7 @@ export default () => {
 };
 ```
 
-## 方向 Direction
+## 方向
 
 可以设置横排或竖排，默认横排：`'vertical'｜'horizontal'`。
 
@@ -134,7 +134,7 @@ export default () => {
 };
 ```
 
-## 换行 Wrap
+## 换行
 
 设置 `wrap` 来允许在空间不足时换行。
 
