refactor(docs): update docs dir

--- a/docs/src/content/docs/components/icon.mdx
+++ b/docs/src/content/docs/components/icon.mdx
@@ -1,3 +1,5 @@
+import IconList from '@/content/components/IconList';
+
 # icon 图标
 
 在这汇总Yike Design 内置的图标，将不定期更新。
@@ -9,8 +11,6 @@
 ```shell pure
 pnpm add @yike-design/react-icons
 ```
-
-import IconList from './IconList.tsx';
 
 ## 图标列表
 
