feat: support external complex demo

--- a/docs/src/content/docs/components/button.mdx
+++ b/docs/src/content/docs/components/button.mdx
@@ -4,19 +4,7 @@
 
 按钮有三种类型：主按钮、次要按钮、线框按钮。主按钮在同一个操作区域建议最多出现一次。
 
-```tsx
-import { Button, Space } from '@yike-design/react';
-
-export default () => {
-  return (
-    <Space>
-      <Button>主要按钮</Button>
-      <Button type="secondary">次要按钮</Button>
-      <Button type="outline">线框按钮</Button>
-    </Space>
-  );
-};
-```
+<code src="~demos/button/basic-type.tsx" />
 
 ## 按钮尺寸
 
