feat: inline demo support external import

--- a/docs/src/content/docs/components/typography.mdx
+++ b/docs/src/content/docs/components/typography.mdx
@@ -7,6 +7,7 @@
 展示不同级别的标题，通过 `level` 展示不同级别的标题， 一共五个级别
 
 ```tsx
+import React from 'react';
 import { Typography } from '@yike-design/react';
 
 export default () => {
