feat: add inline code style

--- a/docs/src/content/docs/components/icon.mdx
+++ b/docs/src/content/docs/components/icon.mdx
@@ -6,7 +6,7 @@ import IconList from '@/content/components/IconList';
 
 ## 使用方法
 
-使用图标组件，你需要安装 @yike-design/react-icons 图标组件包：
+使用图标组件，你需要安装 `@yike-design/react-icons` 图标组件包：
 
 ```shell pure
 pnpm add @yike-design/react-icons
