docs(Typography): update doc

--- a/docs/src/content/docs/components/typography.mdx
+++ b/docs/src/content/docs/components/typography.mdx
@@ -56,7 +56,27 @@ export default () => {
 文本段落
 
 ```tsx
+import { Typography } from '@yike-design/react';
 
+export default () => {
+  return (
+    <div>
+      <Typography.Title level={2}>科学和人文谁更有意义</Typography.Title>
+      <Typography.Paragraph>
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。
+        这种事实对本人来说意义重大，相信对这个世界也是有一定意义的。
+        本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 那么，
+        现在，解决科学和人文谁更有意义的问题，是非常非常重要的。 所以， 而这些并不是完全重要，更加重要的问题是，
+        富兰克林曾经提到过，读书是易事，思索是难事，但两者缺一，便全无用处。我希望诸位也能好好地体会这句话。
+        了解清楚科学和人文谁更有意义到底是一种怎么样的存在，是解决一切问题的关键。 从这个角度来看，
+        可是，即使是这样，科学和人文谁更有意义的出现仍然代表了一定的意义。 那么，
+        一般来讲，我们都必须务必慎重的考虑考虑。 要想清楚，科学和人文谁更有意义，到底是一种怎么样的存在。
+        生活中，若科学和人文谁更有意义出现了，我们就不得不考虑它出现了的事实。
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。 科学和人文谁更有意义因何而发生。
+      </Typography.Paragraph>
+    </div>
+  );
+};
 ```
 
 ## 省略
@@ -71,25 +91,40 @@ export default () => {
     // TODO: fix use Space height is 0
     <div className="flex flex-col gap-4">
       <Typography.Paragraph ellipsis>
-        Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design
-        language for background applications, is refined by Ant UED Team. Ant Design, a design language for background
-        applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined
-        by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant
-        Design, a design language for background applications, is refined by Ant UED Team.
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。
+        这种事实对本人来说意义重大，相信对这个世界也是有一定意义的。
+        本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 那么，
+        现在，解决科学和人文谁更有意义的问题，是非常非常重要的。 所以， 而这些并不是完全重要，更加重要的问题是，
+        富兰克林曾经提到过，读书是易事，思索是难事，但两者缺一，便全无用处。我希望诸位也能好好地体会这句话。
+        了解清楚科学和人文谁更有意义到底是一种怎么样的存在，是解决一切问题的关键。 从这个角度来看，
+        可是，即使是这样，科学和人文谁更有意义的出现仍然代表了一定的意义。 那么，
+        一般来讲，我们都必须务必慎重的考虑考虑。 要想清楚，科学和人文谁更有意义，到底是一种怎么样的存在。
+        生活中，若科学和人文谁更有意义出现了，我们就不得不考虑它出现了的事实。
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。 科学和人文谁更有意义因何而发生。
       </Typography.Paragraph>
       <Typography.Paragraph ellipsis={{ rows: 2 }}>
-        Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design
-        language for background applications, is refined by Ant UED Team. Ant Design, a design language for background
-        applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined
-        by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant
-        Design, a design language for background applications, is refined by Ant UED Team.
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。
+        这种事实对本人来说意义重大，相信对这个世界也是有一定意义的。
+        本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 那么，
+        现在，解决科学和人文谁更有意义的问题，是非常非常重要的。 所以， 而这些并不是完全重要，更加重要的问题是，
+        富兰克林曾经提到过，读书是易事，思索是难事，但两者缺一，便全无用处。我希望诸位也能好好地体会这句话。
+        了解清楚科学和人文谁更有意义到底是一种怎么样的存在，是解决一切问题的关键。 从这个角度来看，
+        可是，即使是这样，科学和人文谁更有意义的出现仍然代表了一定的意义。 那么，
+        一般来讲，我们都必须务必慎重的考虑考虑。 要想清楚，科学和人文谁更有意义，到底是一种怎么样的存在。
+        生活中，若科学和人文谁更有意义出现了，我们就不得不考虑它出现了的事实。
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。 科学和人文谁更有意义因何而发生。
       </Typography.Paragraph>
       <Typography.Paragraph ellipsis={{ rows: 2, expandable: true }}>
-        Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design
-        language for background applications, is refined by Ant UED Team. Ant Design, a design language for background
-        applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined
-        by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant
-        Design, a design language for background applications, is refined by Ant UED Team.
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。
+        这种事实对本人来说意义重大，相信对这个世界也是有一定意义的。
+        本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 那么，
+        现在，解决科学和人文谁更有意义的问题，是非常非常重要的。 所以， 而这些并不是完全重要，更加重要的问题是，
+        富兰克林曾经提到过，读书是易事，思索是难事，但两者缺一，便全无用处。我希望诸位也能好好地体会这句话。
+        了解清楚科学和人文谁更有意义到底是一种怎么样的存在，是解决一切问题的关键。 从这个角度来看，
+        可是，即使是这样，科学和人文谁更有意义的出现仍然代表了一定的意义。 那么，
+        一般来讲，我们都必须务必慎重的考虑考虑。 要想清楚，科学和人文谁更有意义，到底是一种怎么样的存在。
+        生活中，若科学和人文谁更有意义出现了，我们就不得不考虑它出现了的事实。
+        所谓科学和人文谁更有意义，关键是科学和人文谁更有意义需要如何写。 科学和人文谁更有意义因何而发生。
       </Typography.Paragraph>
     </div>
   );
