feat(Button): update button style

--- a/docs/src/content/docs/components/button.mdx
+++ b/docs/src/content/docs/components/button.mdx
@@ -173,7 +173,7 @@ export default () => {
 
 通过设置 `loading` 可以让按钮处于加载中状态。处于加载中状态的按钮不会触发点击事件。
 
-TODO: add loading icon button
+<code src="~demos/button/loading-status.tsx" />
 
 ## 长按钮
 
