chore: update docs list

--- a/docs/src/content/docs/components/icon.mdx
+++ b/docs/src/content/docs/components/icon.mdx
@@ -1,3 +1,10 @@
+---
+title: 图标 Icon
+label: Icon 图标
+group: General
+order: 2
+---
+
 import IconList from '@/content/components/icon/IconList';
 
 # icon 图标
