chore: adjust prettier make code more readable

--- a/docs/src/content/docs/components/anchor.mdx
+++ b/docs/src/content/docs/components/anchor.mdx
@@ -12,28 +12,19 @@ order: 1
 
 ## 基本使用
 
-<code
-  iframe
-  src="~demos/anchor/basic.tsx"
-/>
+<code iframe src="~demos/anchor/basic.tsx" />
 
 ## 无轴线
 
 不显示左侧导航轴
 
-<code
-  iframe
-  src="~demos/anchor/lineless.tsx"
-/>
+<code iframe src="~demos/anchor/lineless.tsx" />
 
 ## 自定义滚动容器
 
 使用 `getContainer` 指定滚动的容器，默认为 `window`。
 
-<code
-  iframe
-  src="~demos/anchor/container.tsx"
-/>
+<code iframe src="~demos/anchor/container.tsx" />
 
 ## API
 
