--- a/docs/src/content/docs/components/button.mdx
+++ b/docs/src/content/docs/components/button.mdx
@@ -63,10 +63,7 @@ export default () => {
   return (
     <Space>
       <Button icon={<PlusOutlined />}>新建</Button>
-      <Button
-        status="danger"
-        icon={<DeleteOutlined />}
-      >
+      <Button status="danger" icon={<DeleteOutlined />}>
         删除
       </Button>
     </Space>
@@ -91,61 +88,37 @@ export default () => {
       </Space>
       <Space>
         <Button status="primary">主要按钮</Button>
-        <Button
-          type="secondary"
-          status="primary"
-        >
+        <Button type="secondary" status="primary">
           次要按钮
         </Button>
-        <Button
-          type="outline"
-          status="primary"
-        >
+        <Button type="outline" status="primary">
           线框按钮
         </Button>
       </Space>
       <Space>
         <Button status="success">主要按钮</Button>
-        <Button
-          type="secondary"
-          status="success"
-        >
+        <Button type="secondary" status="success">
           次要按钮
         </Button>
-        <Button
-          type="outline"
-          status="success"
-        >
+        <Button type="outline" status="success">
           线框按钮
         </Button>
       </Space>
       <Space>
         <Button status="warning">主要按钮</Button>
-        <Button
-          type="secondary"
-          status="warning"
-        >
+        <Button type="secondary" status="warning">
           次要按钮
         </Button>
-        <Button
-          type="outline"
-          status="warning"
-        >
+        <Button type="outline" status="warning">
           线框按钮
         </Button>
       </Space>
       <Space>
         <Button status="danger">主要按钮</Button>
-        <Button
-          type="secondary"
-          status="danger"
-        >
+        <Button type="secondary" status="danger">
           次要按钮
         </Button>
-        <Button
-          type="outline"
-          status="danger"
-        >
+        <Button type="outline" status="danger">
           线框按钮
         </Button>
       </Space>
@@ -165,10 +138,7 @@ export default () => {
   return (
     <Space>
       <Button disabled>禁用按钮</Button>
-      <Button
-        shape="round"
-        disabled
-      >
+      <Button shape="round" disabled>
         禁用按钮
       </Button>
     </Space>
@@ -191,21 +161,12 @@ import { Button, Space } from '@yike-design/react';
 
 export default () => {
   return (
-    <Space
-      direction="vertical"
-      block
-    >
+    <Space direction="vertical" block>
       <Button long>主要按钮</Button>
-      <Button
-        type="secondary"
-        long
-      >
+      <Button type="secondary" long>
         次要按钮
       </Button>
-      <Button
-        type="outline"
-        long
-      >
+      <Button type="outline" long>
         线框按钮
       </Button>
     </Space>
