--- a/docs/src/content/docs/components/link.mdx
+++ b/docs/src/content/docs/components/link.mdx
@@ -21,10 +21,7 @@ export default () => {
       这里有两个链接：一个是
       <Link href="http://bing.com">链接</Link>
       ，另一个是
-      <Link
-        href="http://bing.com"
-        disabled
-      >
+      <Link href="http://bing.com" disabled>
         禁用的链接
       </Link>。
     </p>
@@ -44,28 +41,16 @@ export default () => {
       <Typography.Title level={5}>
         <Link href="/">yike design</Link>
       </Typography.Title>
-      <Typography.Title
-        level={4}
-        type="primary"
-      >
+      <Typography.Title level={4} type="primary">
         <Link href="/">yike design</Link>
       </Typography.Title>
-      <Typography.Title
-        level={3}
-        type="success"
-      >
+      <Typography.Title level={3} type="success">
         <Link href="/">yike design</Link>
       </Typography.Title>
-      <Typography.Title
-        level={2}
-        type="warning"
-      >
+      <Typography.Title level={2} type="warning">
         <Link href="/">yike design</Link>
       </Typography.Title>
-      <Typography.Title
-        level={1}
-        type="danger"
-      >
+      <Typography.Title level={1} type="danger">
         <Link href="/">yike design</Link>
       </Typography.Title>
     </div>
