--- a/docs/src/content/docs/components/space.mdx
+++ b/docs/src/content/docs/components/space.mdx
@@ -67,10 +67,7 @@ export default () => {
         <div className="demo-box-1"></div>
       </Space>
       <h4>自定义水平和竖直间距 size=[50, 30]</h4>
-      <Space
-        size={[50, 30]}
-        wrap
-      >
+      <Space size={[50, 30]} wrap>
         <div className="demo-box-3"></div>
         <div className="demo-box-3"></div>
         <div className="demo-box-3"></div>
