docs(affix): complete docs

--- a/docs/src/content/docs/components/affix.mdx
+++ b/docs/src/content/docs/components/affix.mdx
@@ -13,13 +13,19 @@ order: 2
 
 最简单的用法。
 
-<code src="~demos/affix/basic.tsx" />
+<code src="~demos/affix/basic-usage.tsx" />
+
+## 固定状态改变
+
+通过 `onChange` 事件可以监听固定状态的变化。
+
+<code src="~demos/affix/affixed-change.tsx" />
 
 ## 指定容器滚动
 
 设置 `target` 属性，可以将滚动容器指定为 `Affix` 的父元素。
 
-<code src="~demos/affix/target.tsx" />
+<code src="~demos/affix/with-target.tsx" />
 
 ## API
 
